# mcp-aoai-web-browsing

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  chatgui.py  client_test.py  pyproject.toml  smithery.yaml
client_bridge/: __init__.py  bridge.py  config.py  llm_client.py  llm_config.py  mcp_client.py
server/: browser_manager.py  browser_navigator_server.py
